2.94 -> 2.95
	- fix: last update transaction set segfault bug in installer.
	- improved checks for statfs (Tim Mooney).
	- remove inconsistent use of __P((...)) throughout.
	- non-static inline functions caused IRIX cc pain.
	- CPIOERR_CHECK_ERRNO masking caused AIX cc warnings.
	- solaris 2.6+ needs statvfs.
	- check build prerequisites before building from specfile.

2.93 -> 2.94
	- fix: segfault while parsing target string.
	- fix: os was not initialized with "--target i586".
	- fix: --prefix resurrected.
	- non-linux, non-gcc portability fixes (Tim Mooney).
	- default to static libs only (remove implied support for shared libs).

2.92 -> 2.93
	- eliminate old rpmrc configuration syntax.
	- pgp5 support (Carlo Wood <carlo@runaway.xs4all.nl>)
	- fix: segfault from double close on ftpGetFileDesc->ftpAbort path.
	- fix: don't add header if signature generation failed (Carlo Wood).
	- more DU 4.0D fiddles (Shing-Gene Yung).
	- fix: segfault from unknown uid/gid -- use builder's uid/gid instead.
	- autoReq/autoProv now per-package.
	- fix: avoid segfault using --prefix until ewt fixes.
	- add --define "%foo %bar" option.
	- dump macros to same fd as --showrc uses.
	- add %GNUconfigure for full-blown package regeneration.
	- fix: RPM_ARCH/RPM_OS had wrong values.
	- fix: create ppc directories correctly.
	- (re-)enable fixowner/fixgroup macros.
	- fix: specfile BuildRoot was masking rpmrc macro.
	- expand twiddles in macrofiles list.
	- add explicit macrofiles path to rpmrc.
	- add per-target macrofiles to search path.
	- take globalMacroContext out of macro api.
	- fix: flush all macros between builds.
	- add name/version/release macros during src.rpm install.
	- attempt mkdir sourcedir/specdir during src.rpm install.

2.91 -> 2.92
	- update with libtool-2.4f.
	- DU 4.0D fiddles (Shing-Gene Yung<shing@cz3.nus.edu.sg>)
	- change support@redhat.com to rpm-list@redhat.com.
	- fix: with --target=i686, pass macro %_arch=i386.
	- fix: rpm --target=arch ... resurrected.